--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Alat Hitung Kurva S — Progress & WhatsApp Share</title>
+    <title>Hitung Kurva S by Kealvin</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body class="bg-slate-50 text-slate-900 min-h-screen p-6">
     <div class="max-w-6xl mx-auto">
       <header class="mb-6">
-        <h1 class="text-2xl font-semibold">Alat Hitung Kurva S</h1>
+        <h1 class="text-2xl font-semibold">Alat Hitung Kurva S by Kealvin</h1>
         <p class="text-sm text-slate-600">Input item pekerjaan, volume rencana & realisasi — lihat persentase, Kurva-S kumulatif, dan kirim hasil ke WhatsApp.</p>
       </header>
 
@@ -79,6 +79,8 @@
       </main>
 
       <footer class="mt-6 text-xs text-slate-500">Nomor WA harus pakai kode negara (contoh 628.. untuk Indonesia).</footer>
+      <footer class="mt-6 text-xs text-slate-500">Aplikasi ini masih berupa prototype, tolong beri masukan jika ada yang kurang.</footer>
+      <footer class="mt-6 text-xs text-slate-500">Copyright all rights reserved 2025 © Kealvin .</footer>
     </div>
 
     <script>
